<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".presentation.search_settings_fragments.SearchPeriodFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/period"
                android:textColor="@color/dark_grey"
                android:textSize="12sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_period_from" />

        <include
            android:id="@+id/date_picker_from"
            layout="@layout/custom_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:text="@string/search_period_to" />

        <include
            android:id="@+id/date_picker_to"
            layout="@layout/custom_date_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="26dp"
            android:layout_marginTop="16dp" />

        <TextView
            android:id="@+id/apply_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_button"
            android:paddingHorizontal="24dp"
            android:paddingVertical="8dp"
            android:text="@string/choose"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>
</ScrollView>